--- a/demo/README
+++ b/demo/README
@@ -1,1 +1,1 @@
-S
+This project is open source code for the paper "Multi-fidelity surrogate model based on transfer learning for performance prediction of truss structure"
